iowow (1.4.10) UNRELEASED; urgency=medium

  * Fixed misuse of `IWKV_OPTS.file_lock_fail_fast` (#35)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 14 Dec 2020 15:08:30 +0700

iowow (1.4.9) testing; urgency=medium

  * Code review of iwkv cache keys comparison, related issue: https://github.com/Softmotions/ejdb/issues/291
  * Added `bool iwu_uuid_valid(const char *uuid)` (iwuuid.h)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 18 Nov 2020 15:04:03 +0700

iowow (1.4.8) testing; urgency=medium

  * Fixed serios bug concerning non-unique ejdb2 indexes, details: https://github.com/Softmotions/ejdb/issues/291
  * Fixed potencial memory leak in `iwlist_create()` (iwarr.h)
  * Fixed wrong `iwulist_clear()` behaviour (iwarr.h)
  * Code cleanup
  * Added `iwulist_at2()` (iwarr.h)
  * Removed not needed assertion (iwstree.c)

 -- Anton Adamansky <adamansky@gmail.com>  Sun, 08 Nov 2020 21:51:49 +0700

iowow (1.4.7) testing; urgency=medium

  * Correct handling of EINTR, EAGAIN in read/write functions (unix.c)
  * Minor fixes on iwhmap

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 21 Sep 2020 12:14:06 +0700

iowow (1.4.6) testing; urgency=medium

  * Added `iwpool_user_data_detach()` (iwpool.h)
  * Added `iwpool_create_empty()` (iwpool.h)
  * Added simple hashmap implementation (iwhmap.h)
  * `IWPOOL` is able to store associated user data (iwpool.h)
  * `pthread_barrierattr` shim for android API < 24
  * Added `iwsha256()` SHA-256 hash implementation (iwsha2.h)
  * Added single thread worker (iwstw.h)
  * Added `iwstree_clear()` (iwstree.h)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 24 Jun 2020 18:32:24 +0700

iowow (1.4.5) testing; urgency=medium

  * Added `iwulist_clear` (iwarr.h)
  * Added `RCIF` (basedefs.h)
  * Fix assertion error in `iwstree_remove()` (iwstree.h)
  * Allows zero key/value placeholders in `iwstree_iter_next()` (iwstree.h)
  * Added `iwstree_put_overwrite` (iwstree.h)
  * Added  iwstree iteration API (iwstree.h)